--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,18 @@
-<h2 id="title">Welcome to Ember</h2>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+    {{#link-to 'index' class="navbar-brand"}}Playlister{{/link-to}}
+    </div>
 
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+      <ul class="nav navbar-nav">
+        <li class="active">{{link-to 'Artists' 'artists'}}</li>
+        <li class="active">{{link-to 'Albums' 'albums'}}</li>
+        <li class="active">{{link-to 'Songs' 'songs'}}</li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<div class="well col-sm-6 col-sm-offset-4">
 {{outlet}}
+</div>
