all links working except for link-to album on a song's show page

--- a/app/templates/albums/album.hbs
+++ b/app/templates/albums/album.hbs
@@ -3,7 +3,7 @@
 songs:
 <ul>
   {{#each model.songs as |song|}}
-    <li>{{song.name}}</li>
+    <li>{{#link-to 'songs.song' song.id}}{{song.name}}{{/link-to}}</li>
   {{/each}}
 </ul>
 
