--- a/app/templates/songs/song.hbs
+++ b/app/templates/songs/song.hbs
@@ -1,10 +1,11 @@
 <h4>{{model.name}}</h4>
 
-<p>album: {{model.album.name}}</p>
+<p>album: {{#link-to 'albums.album' album.id}}{{model.album.name}}{{/link-to}}</p>
+
 artists:
 <ul>
   {{#each model.artists as |artist|}}
-    <li>{{artist.name}}</li>
+    <li>{{#link-to 'artists.artist' artist.id}}{{artist.name}}{{/link-to}}</li>
   {{/each}}
 </ul>
 
