connected to deployed api, build link-to with objects, not ids

--- a/app/templates/albums/album.hbs
+++ b/app/templates/albums/album.hbs
@@ -3,7 +3,7 @@
 songs:
 <ul>
   {{#each model.songs as |song|}}
-    <li>{{#link-to 'songs.song' song.id}}{{song.name}}{{/link-to}}</li>
+    <li>{{#link-to 'songs.song' song}}{{song.name}}{{/link-to}}</li>
   {{/each}}
 </ul>
 
