--- a/app/templates/songs/song.hbs
+++ b/app/templates/songs/song.hbs
@@ -5,7 +5,7 @@
 artists:
 <ul>
   {{#each model.artists as |artist|}}
-    <li>{{#link-to 'artists.artist' artist.id}}{{artist.name}}{{/link-to}}</li>
+    <li>{{#link-to 'artists.artist' artist}}{{artist.name}}{{/link-to}}</li>
   {{/each}}
 </ul>
 
