complete test suite

--- a/app/templates/albums/index.hbs
+++ b/app/templates/albums/index.hbs
@@ -1,7 +1,7 @@
 Albums:
 <ul>
   {{#each model as |album|}}
-  <li>
+  <li class="albums">
     {{#link-to 'albums.album' album}}
       {{album.name}}
     {{/link-to}}
