--- a/app/templates/artists/index.hbs
+++ b/app/templates/artists/index.hbs
@@ -1,7 +1,7 @@
 Artists
 <ul>
   {{#each model as |artist|}}
-  <li>
+  <li class="artists">
     {{#link-to 'artists.artist' artist}}
       {{artist.name}}
     {{/link-to}}
