--- a/app/templates/songs/index.hbs
+++ b/app/templates/songs/index.hbs
@@ -1,7 +1,7 @@
 Songs:
 <ul>
   {{#each model as |song|}}
-  <li>
+  <li class="songs">
     {{#link-to 'songs.song' song}}
       {{song.name}}
     {{/link-to}}
