--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,9 +6,9 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav">
-        <li class="active">{{link-to 'Artists' 'artists'}}</li>
-        <li class="active">{{link-to 'Albums' 'albums'}}</li>
-        <li class="active">{{link-to 'Songs' 'songs'}}</li>
+        <li class="active" id="artists">{{link-to 'Artists' 'artists'}}</li>
+        <li class="active" id="albums">{{link-to 'Albums' 'albums'}}</li>
+        <li class="active" id="songs">{{link-to 'Songs' 'songs'}}</li>
       </ul>
     </div>
   </div>
