--- a/app/templates/artists/artist.hbs
+++ b/app/templates/artists/artist.hbs
@@ -3,7 +3,11 @@
 albums:
 <ul>
   {{#each model.albums as |album|}}
-    <li>{{#link-to 'albums.album' album.id}}{{album.name}}{{/link-to}}</li>
+    <li class="albums">
+      {{#link-to 'albums.album' album.id}}
+        {{album.name}}
+      {{/link-to}}
+    </li>
   {{/each}}
 </ul>
 
