--- a/app/templates/songs/song.hbs
+++ b/app/templates/songs/song.hbs
@@ -1,11 +1,11 @@
 <h4>{{model.name}}</h4>
 
-<p>album: {{#link-to 'albums.album' album.id}}{{model.album.name}}{{/link-to}}</p>
+<p id="album">album: {{#link-to 'albums.album' model.album.id}}{{model.album.name}}{{/link-to}}</p>
 
 artists:
 <ul>
   {{#each model.artists as |artist|}}
-    <li>{{#link-to 'artists.artist' artist}}{{artist.name}}{{/link-to}}</li>
+    <li class="artists">{{#link-to 'artists.artist' artist}}{{artist.name}}{{/link-to}}</li>
   {{/each}}
 </ul>
 
