--- a/app/templates/albums/index.hbs
+++ b/app/templates/albums/index.hbs
@@ -1,10 +1,8 @@
 Albums:
 <ul>
-  {{#each model as |album|}}
+  start your iteration here!
   <li class="albums">
-    {{#link-to 'albums.album' album}}
-      {{album.name}}
-    {{/link-to}}
+    render the album name. The album name should link to the album show page.
   </li>
-  {{/each}}
+
 </ul>
