--- a/app/templates/artists/index.hbs
+++ b/app/templates/artists/index.hbs
@@ -1,10 +1,7 @@
 Artists
 <ul>
-  {{#each model as |artist|}}
+  start your iteration here.
   <li class="artists">
-    {{#link-to 'artists.artist' artist}}
-      {{artist.name}}
-    {{/link-to}}
+    render the artist's name. the name should link to the artist's show page.
   </li>
-  {{/each}}
 </ul>
