--- a/app/templates/songs/index.hbs
+++ b/app/templates/songs/index.hbs
@@ -1,10 +1,7 @@
 Songs:
 <ul>
-  {{#each model as |song|}}
+  start your iteration here!
   <li class="songs">
-    {{#link-to 'songs.song' song}}
-      {{song.name}}
-    {{/link-to}}
+    render each individual song name here. The song name should also link to the song's show page.
   </li>
-  {{/each}}
 </ul>
