--- a/app/templates/songs/song.hbs
+++ b/app/templates/songs/song.hbs
@@ -4,8 +4,7 @@
 
 artists:
 <ul>
-  {{#each model.artists as |artist|}}
-    <li class="artists">{{#link-to 'artists.artist' artist}}{{artist.name}}{{/link-to}}</li>
-  {{/each}}
+  start you iteration through a song's artists here
+    <li class="artists">render the artist's name here. the name should link to that artist's show page.</li>
 </ul>
 
