--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,13 +6,21 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav">
+        {{nav-bar}}
         <li class="active" id="artists">{{link-to 'Artists' 'artists'}}</li>
         <li class="active" id="albums">{{link-to 'Albums' 'albums'}}</li>
         <li class="active" id="songs">{{link-to 'Songs' 'songs'}}</li>
+        {{#if currentUser}}
+          <li class="active"><a href="#">Hi, {{currentUser.email}}</a></li>
+          <li class="active"><a href="#" {{action 'logout'}}>Logout</a></li>
+        {{else}}
+          <li class="active" id="songs">{{#link-to 'login'}}Login{{/link-to}}</li>
+        {{/if}}
       </ul>
     </div>
   </div>
 </nav>
 <div class="well col-sm-6 col-sm-offset-4">
+
 {{outlet}}
 </div>
