switch to active model serializer, solved null id issue

--- a/app/templates/albums/new.hbs
+++ b/app/templates/albums/new.hbs
@@ -1,5 +1,6 @@
 {{album-form album=model 
-  triggerAddSong=(action "addSong") 
+  triggerAddSong=(action "addSong")
+  triggerAddArtist=(action "addArtist") 
   triggerSave=(action "save")
   }}
 
