--- a/app/templates/albums/index.hbs
+++ b/app/templates/albums/index.hbs
@@ -1,8 +1,10 @@
 Albums:
 <ul>
-  start your iteration here!
+  {{#each model as |album|}}
   <li class="albums">
-    render the album name. The album name should link to the album show page.
+    {{#link-to 'albums.album' album}}
+      {{album.name}}
+    {{/link-to}}
   </li>
-
+  {{/each}}
 </ul>
