--- a/app/templates/artists/index.hbs
+++ b/app/templates/artists/index.hbs
@@ -1,7 +1,10 @@
 Artists
 <ul>
-  start your iteration here.
+  {{#each model as |artist|}}
   <li class="artists">
-    render the artist's name. the name should link to the artist's show page.
+    {{#link-to 'artists.artist' artist}}
+      {{artist.name}}
+    {{/link-to}}
   </li>
+  {{/each}}
 </ul>
