--- a/app/templates/albums/album.hbs
+++ b/app/templates/albums/album.hbs
@@ -1,8 +1,9 @@
+
 <h4>{{model.name}}</h4>
 
 songs:
 <ul>
-  iterate over the album's songs here. 
-    <li class="songs">render the song name, which should link to the song's show page, here.</li>
+  {{#each model.songs as |song|}}
+    <li class="songs">{{#link-to 'songs.song' song}}{{song.name}}{{/link-to}}</li>
+  {{/each}}
 </ul>
-
