--- a/app/templates/songs/song.hbs
+++ b/app/templates/songs/song.hbs
@@ -4,7 +4,7 @@
 
 artists:
 <ul>
-  start you iteration through a song's artists here
-    <li class="artists">render the artist's name here. the name should link to that artist's show page.</li>
+  {{#each model.artists as |artist|}}
+    <li class="artists">{{#link-to 'artists.artist' artist}}{{artist.name}}{{/link-to}}</li>
+  {{/each}}
 </ul>
-
